[gd_scene load_steps=56 format=3 uid="uid://bjcae5dk5hf0l"]

[ext_resource type="TileSet" uid="uid://vlbo2yyf0eg0" path="res://Tileset/TileMapFloor.tres" id="1_i3syr"]
[ext_resource type="Texture2D" uid="uid://cl36r67eufqv4" path="res://Sprites/Background/planetParallax.png" id="2_1fvn5"]
[ext_resource type="Texture2D" uid="uid://yaq30df8fqh2" path="res://Sprites/Background/WALLSParallax.png" id="3_lia55"]
[ext_resource type="Script" path="res://Scenes/player.gd" id="5_tm824"]
[ext_resource type="Shader" path="res://Shaders/damage.gdshader" id="6_pwjmh"]
[ext_resource type="Texture2D" uid="uid://do4njolyqrvrs" path="res://Sprites/Hero/fullspritesheet.png" id="6_q0si3"]
[ext_resource type="Texture2D" uid="uid://dbr0iq7hpl4g4" path="res://Sprites/Hero/SpriteJumpUp.png" id="6_wfttc"]
[ext_resource type="Texture2D" uid="uid://rye62komnvd" path="res://Sprites/Hero/SpriteRun.png" id="7_ops7n"]
[ext_resource type="Script" path="res://Scripts/Evil.gd" id="10_imw2r"]
[ext_resource type="Texture2D" uid="uid://hnp71vlb64op" path="res://Sprites/Evil/evil_sprite_2.png" id="11_biqqp"]
[ext_resource type="PackedScene" uid="uid://cr08unk8s6vri" path="res://Scenes/in_game_menu.tscn" id="12_kp3jh"]
[ext_resource type="Script" path="res://Scenes/healthBar.gd" id="12_m54hw"]
[ext_resource type="PackedScene" path="res://Scenes/evil_hands.tscn" id="13_kxi2i"]
[ext_resource type="Texture2D" uid="uid://cnevanfff1kwm" path="res://Sprites/ProgressBar/progressBar.png" id="13_thajy"]
[ext_resource type="Texture2D" uid="uid://cdl00amg7y37b" path="res://Sprites/ProgressBar/progress.png" id="14_f63aa"]
[ext_resource type="Script" path="res://Scripts/TextureProgressBar.gd" id="15_vipe1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6goo0"]
size = Vector2(108, 124)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g4qec"]
shader = ExtResource("6_pwjmh")
shader_parameter/quantity = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_iwqpr"]
atlas = ExtResource("6_q0si3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt0ty"]
atlas = ExtResource("6_q0si3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb2cs"]
atlas = ExtResource("6_q0si3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlh2v"]
atlas = ExtResource("6_q0si3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjdg2"]
atlas = ExtResource("6_q0si3")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsb1n"]
atlas = ExtResource("6_q0si3")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rnin"]
atlas = ExtResource("6_q0si3")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xjhl"]
atlas = ExtResource("6_q0si3")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqgil"]
atlas = ExtResource("6_q0si3")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndtgt"]
atlas = ExtResource("6_wfttc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_chufc"]
atlas = ExtResource("6_wfttc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeoyo"]
atlas = ExtResource("7_ops7n")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt4l3"]
atlas = ExtResource("7_ops7n")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yotac"]
atlas = ExtResource("7_ops7n")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctcus"]
atlas = ExtResource("7_ops7n")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mngod"]
atlas = ExtResource("7_ops7n")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwyb4"]
atlas = ExtResource("7_ops7n")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ng2s6"]
atlas = ExtResource("7_ops7n")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cox2p"]
atlas = ExtResource("7_ops7n")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xse2f"]
atlas = ExtResource("7_ops7n")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjrfr"]
atlas = ExtResource("7_ops7n")
region = Rect2(64, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mvxrc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwqpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt0ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb2cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlh2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjdg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsb1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rnin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xjhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqgil")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndtgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chufc")
}],
"loop": true,
"name": &"JumpUp",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeoyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt4l3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yotac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctcus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mngod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwyb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ng2s6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cox2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xse2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjrfr")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="GDScript" id="GDScript_yaubk"]

[sub_resource type="Animation" id="Animation_avfw0"]
resource_name = "Damage_animation"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:shake")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationSprite:material:shader_parameter/quantity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.0, 0.0, 1.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_jf48a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:shake")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationSprite:material:shader_parameter/quantity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j0yem"]
_data = {
"Damage_animation": SubResource("Animation_avfw0"),
"RESET": SubResource("Animation_jf48a")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_6ltlo"]
atlas = ExtResource("11_biqqp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvtyb"]
atlas = ExtResource("11_biqqp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdymo"]
atlas = ExtResource("11_biqqp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w87up"]
atlas = ExtResource("11_biqqp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5nb5"]
atlas = ExtResource("11_biqqp")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b11k"]
atlas = ExtResource("11_biqqp")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_417c8"]
atlas = ExtResource("11_biqqp")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpmeh"]
atlas = ExtResource("11_biqqp")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_cx0b5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ltlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvtyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdymo")
}],
"loop": true,
"name": &"evilSprite",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w87up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5nb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b11k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_417c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpmeh")
}],
"loop": true,
"name": &"evilSpriteAttack",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sik1w"]
radius = 54.0
height = 124.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aicmb"]
size = Vector2(94, 201.5)

[node name="CosmicShip" type="Node2D"]

[node name="InGameMenu" parent="." instance=ExtResource("12_kp3jh")]

[node name="Floor" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("1_i3syr")
format = 2
layer_0/tile_data = PackedInt32Array(2424832, 0, 0, 2424833, 0, 0, 2424834, 0, 0, 2424835, 0, 0, 2424836, 0, 0, 2424837, 0, 0, 2424838, 0, 0, 2424839, 0, 0, 2424840, 0, 0, 2424841, 0, 0, 2424842, 0, 0, 2424843, 0, 0, 2424844, 0, 0, 2424845, 0, 0, 2424846, 0, 0, 2424847, 0, 0, 2424848, 0, 0, 2424849, 0, 0, 2424850, 0, 0, 2424851, 0, 0, 2424852, 0, 0, 2424853, 0, 0, 2424854, 0, 0, 2424855, 0, 0, 2424856, 0, 0, 2424857, 0, 0, 2424858, 0, 0, 2424859, 0, 0, 2424860, 0, 0, 2424861, 0, 0, 2424862, 0, 0, 2424863, 0, 0, 2424864, 65536, 0, 2424865, 131072, 0, 2424866, 0, 0, 2424867, 0, 0, 2424868, 0, 0, 2424869, 0, 0, 2424870, 0, 0, 2424871, 0, 0, 2424874, 0, 0, 2424873, 0, 0, 2424872, 0, 0, 2424875, 196608, 0, 2424876, 0, 0, 2424877, 0, 0, 2424878, 0, 0, 2424879, 0, 0, 2424880, 0, 0, 2424881, 0, 0, 2424882, 0, 0, 2424883, 0, 0, 2424884, 0, 0, 2424885, 0, 0, 2424886, 0, 0, 2424887, 0, 0, 2424888, 0, 0, 2424889, 0, 0, 2424890, 0, 0, 2424891, 0, 0, 2424892, 0, 0, 2424893, 0, 0, 2424894, 0, 0, 2424895, 0, 0, 2424896, 0, 0, 2424897, 0, 0, 2424898, 0, 0, 2424899, 0, 0, 2424900, 0, 0, 2424901, 0, 0, 2424902, 0, 0, 2424903, 0, 0, 2424904, 0, 0, 2424905, 0, 0, 2424906, 0, 0, 2424907, 0, 0, 2424908, 0, 0, 2424909, 0, 0, 2424910, 0, 0, 2424911, 0, 0, 2424912, 0, 0, 2424913, 0, 0, 2424914, 0, 0, 2424915, 0, 0, 2424916, 0, 0, 2424917, 0, 0, 2424918, 0, 0, 2424919, 0, 0, 2424920, 0, 0, 2424921, 0, 0, 2424922, 0, 0, 2424923, 0, 0, 2424924, 65536, 0, 2424925, 131072, 0, 2424926, 0, 0, 2424927, 0, 0, 2424928, 0, 0, 2424929, 0, 0, 2424930, 0, 0, 2424931, 0, 0, 2424932, 0, 0, 2424933, 0, 0, 2424934, 0, 0, 2424935, 196608, 0, 2424936, 0, 0, 2424937, 0, 0, 2490367, 0, 0, 2424831, 0, 0, 2359295, 0, 0, 2293759, 0, 0, 2228223, 0, 0, 2162687, 0, 0, 2097151, 0, 0, 2031615, 0, 0, 1966079, 0, 0, 1900543, 0, 0, 1835007, 0, 0, 1769471, 0, 0, 1703935, 0, 0, 1638399, 0, 0, 1572863, 0, 0, 1507327, 0, 0, 1441791, 0, 0, 1376255, 0, 0, 1310719, 0, 0, 1245183, 0, 0, 1179647, 0, 0, 1114111, 0, 0, 1048575, 0, 0, 983039, 0, 0, 917503, 0, 0, 851967, 0, 0, 786431, 0, 0, 720895, 0, 0, 655359, 0, 0, 589823, 0, 0, 524287, 0, 0, 458751, 0, 0, 393215, 0, 0, 327679, 0, 0, 262143, 0, 0, 196607, 0, 0, 131071, 0, 0, 65535, 0, 0, 2424938, 0, 0, 2424939, 0, 0, 2424940, 0, 0, 2424941, 0, 0, 2424942, 0, 0, 2424943, 0, 0, 2424944, 0, 0, 2424945, 0, 0, 2424946, 0, 0, 2424947, 0, 0, 2424948, 0, 0, 2424949, 0, 0, 2424950, 0, 0, 2424951, 0, 0, 2424952, 0, 0, 2424953, 0, 0, 2424954, 0, 0, 2424955, 0, 0, 2424956, 0, 0, 2424957, 0, 0, 2424958, 0, 0, 2424959, 0, 0, 2424960, 0, 0, 2424961, 0, 0, 2424962, 0, 0, 2424963, 0, 0, 2424964, 0, 0, 2424965, 0, 0, 2424966, 0, 0, 2424967, 0, 0, 2424968, 0, 0, 2424969, 0, 0, 2424970, 0, 0, 2424971, 0, 0, 2424972, 0, 0, 2424973, 0, 0, 2424974, 0, 0, 2424975, 0, 0, 2424976, 0, 0, 2424977, 0, 0, 2424978, 0, 0, 2424979, 0, 0, 2424980, 0, 0, 2424981, 0, 0, 2424982, 0, 0, 2424983, 0, 0, 2424984, 65536, 0, 2424985, 131072, 0, 2424986, 0, 0, 2424987, 0, 0, 2424988, 0, 0, 2424989, 0, 0, 2424990, 0, 0, 2424991, 0, 0, 2424992, 0, 0, 2424993, 0, 0, 2424994, 0, 0, 2424995, 196608, 0, 2424996, 0, 0, 2424997, 0, 0, 2424998, 0, 0, 2424999, 0, 0, 2425000, 0, 0, 2425001, 0, 0, 2425002, 0, 0, 2425003, 0, 0, 2425004, 0, 0, 2425005, 0, 0, 2425006, 0, 0, 2425007, 0, 0, 2425008, 0, 0, 2425009, 0, 0, 2425010, 0, 0, 2425011, 0, 0, 2425012, 0, 0, 2425013, 0, 0, 2425014, 0, 0, 2425015, 0, 0, 2425016, 0, 0, 2425017, 0, 0, 2425018, 0, 0, 2425019, 0, 0, 2425020, 0, 0, 2425021, 0, 0, 2425022, 0, 0, 2425023, 0, 0, 2425024, 0, 0, 2425025, 0, 0, 2425026, 0, 0, 1769666, 0, 0, 1835202, 0, 0, 1900738, 0, 0, 1966274, 0, 0, 2031810, 0, 0, 2097346, 0, 0, 2162882, 0, 0, 2228418, 0, 0, 2293954, 0, 0, 2359490, 0, 0)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Space" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="spaceSprite" type="Sprite2D" parent="ParallaxBackground/Space"]
texture_filter = 1
scale = Vector2(3.6, 3.6)
texture = ExtResource("2_1fvn5")
centered = false

[node name="Ship" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(960, 0)

[node name="WallSprite" type="Sprite2D" parent="ParallaxBackground/Ship"]
texture_filter = 1
scale = Vector2(3.6, 3.6)
texture = ExtResource("3_lia55")
centered = false

[node name="Hero" type="CharacterBody2D" parent="." groups=["player"]]
process_mode = 3
position = Vector2(164, 544)
script = ExtResource("5_tm824")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hero"]
position = Vector2(3, -12)
shape = SubResource("RectangleShape2D_6goo0")

[node name="AnimationSprite" type="AnimatedSprite2D" parent="Hero"]
texture_filter = 1
material = SubResource("ShaderMaterial_g4qec")
use_parent_material = true
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_mvxrc")
animation = &"Idle"

[node name="Camera2D" type="Camera2D" parent="Hero"]
position = Vector2(1, 0)
limit_left = 0
limit_top = 0
limit_bottom = 320
limit_smoothed = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.3
drag_right_margin = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Marker2D" type="Marker2D" parent="Hero"]
position = Vector2(47, -6)
script = SubResource("GDScript_yaubk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hero"]
libraries = {
"": SubResource("AnimationLibrary_j0yem")
}

[node name="JerkTimer" type="Timer" parent="Hero"]
wait_time = 0.3
one_shot = true

[node name="PauseTimer" type="Timer" parent="Hero"]
wait_time = 2.0

[node name="Evil" type="CharacterBody2D" parent="." groups=["evil"]]
texture_filter = 1
position = Vector2(1507, 519)
script = ExtResource("10_imw2r")

[node name="AnimationSprite" type="AnimatedSprite2D" parent="Evil"]
texture_filter = 1
position = Vector2(4, 0)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_cx0b5")
animation = &"evilSpriteAttack"
frame = 1
frame_progress = 0.662772

[node name="CollisionShape2D" type="CollisionShape2D" parent="Evil"]
position = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_sik1w")

[node name="PlayerDetector" type="Area2D" parent="Evil"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Evil/PlayerDetector"]
position = Vector2(-47, -16.75)
shape = SubResource("RectangleShape2D_aicmb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.5
offset_right = 125.5
offset_bottom = 35.0
grow_horizontal = 2
value = 100.0
script = ExtResource("12_m54hw")

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
texture_filter = 1
offset_left = 16.0
offset_top = 39.0
offset_right = 162.0
offset_bottom = 169.0
value = 100.0
fill_mode = 3
texture_under = ExtResource("13_thajy")
texture_progress = ExtResource("14_f63aa")
script = ExtResource("15_vipe1")

[node name="Evil_Hands" parent="." instance=ExtResource("13_kxi2i")]
position = Vector2(2334, 563)

[connection signal="timeout" from="Hero/JerkTimer" to="Hero" method="_on_timer_timeout"]
[connection signal="timeout" from="Hero/PauseTimer" to="Hero" method="_on_pause_timer_timeout"]
[connection signal="body_entered" from="Evil/PlayerDetector" to="Evil" method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="Evil/PlayerDetector" to="Evil" method="_on_player_detector_body_exited"]
